fixed current for tablet, gaps in footer for desktop

--- a/css/main.css
+++ b/css/main.css
@@ -207,9 +207,14 @@ body {
   width: 100%;
   height: 4px;
   border-radius: 4px;
-  bottom: -1.5%;
+  bottom: -11%;
   left: 0;
   background-color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .current::after {
+    bottom: -1.5%;
+  }
 }
 
 .header-list .current {
@@ -605,7 +610,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
-    gap: 70px;
+    gap: 0px;
   }
 }
 
@@ -613,11 +618,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 232px;
+  width: 231px;
 }
 @media screen and (min-width: 1200px) {
   .footer-main {
     align-items: flex-start;
+    margin-right: 70px;
   }
 }
 
@@ -685,10 +691,16 @@ body {
   margin-bottom: 20px;
   font-size: 14px;
 }
+@media screen and (min-width: 1200px) {
+  .footer-social__call {
+    text-align: start;
+  }
+}
 
 .footer-social__list {
   display: flex;
   justify-content: center;
+  gap: 10px;
 }
 
 .footer-subscribe {
@@ -699,10 +711,15 @@ body {
   flex-direction: column;
   flex-grow: 2;
 }
+@media screen and (min-width: 768px) {
+  .footer-subscribe {
+    flex-grow: 1;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer-subscribe {
     align-items: flex-start;
-    margin-left: 11px;
+    margin-left: 93px;
   }
 }
 
@@ -1092,7 +1109,7 @@ body {
 }
 
 .footer-social-networks__link, .team-social-networks__link {
-  display: block;
+  display: flex;
   text-align: center;
   width: 44px;
   height: 44px;
@@ -1110,7 +1127,7 @@ body {
 }
 
 .footer-social-networks__link {
-  margin-right: 10px;
+  gap: 10px;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
