--- a/sass/components/_social-networks.scss
+++ b/sass/components/_social-networks.scss
@@ -1,5 +1,5 @@
 %social-networks__link{
-    display: block;
+    display: flex;
     text-align: center;
     width: 44px;
     height: 44px;
@@ -20,7 +20,7 @@
 }
 .footer-social-networks__link {
     @extend %social-networks__link;
-    margin-right: 10px;
+    gap: 10px;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
