--- a/sass/layouts/_desktop-menu.scss
+++ b/sass/layouts/_desktop-menu.scss
@@ -46,10 +46,14 @@
     width: 100%;
     height: 4px;
     border-radius: 4px;
-    bottom: -1.5%;
+    bottom: -11%;
     left: 0;
 
     background-color: $accent-background-color;
+    @media screen and (min-width: 1200px) {
+            bottom: -1.5%;
+        
+    }
 }
 
 .header-list .current {
