--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -15,16 +15,17 @@
         justify-content: space-around;
     }
     @media screen and (min-width: 1200px) {
-        gap: 70px;
+        gap: 0px;
     }
 }
 
 .footer-main{display: flex;
     flex-direction: column;
     align-items: center;
-    width: 232px;
+    width: 231px;
     @media screen and (min-width: 1200px) {
             align-items: flex-start;
+            margin-right: 70px;
         }
 }
 .footer-contacts{
@@ -92,11 +93,15 @@
     text-align: center;
     margin-bottom: 20px;
     font-size: 14px;
+    @media screen and (min-width: 1200px) {
+        text-align: start;
+    }
 }
 
 .footer-social__list {
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
 
 .footer-subscribe {
@@ -106,9 +111,12 @@
     display: flex;
     flex-direction: column;
     flex-grow: 2;
+    @media screen and (min-width: 768px) {
+        flex-grow: 1;
+    }
     @media screen and (min-width: 1200px) {
         align-items: flex-start;
-        margin-left: 11px;
+        margin-left: 93px;
     }
 }
 .footer-subscribe__slogan {
